Fix display problem on safari & firefox
Remove react-hot-loader which is not needed anymore.
Update profile to work with the new layout.

--- a/src/components/Navbar/Navbar.styl
+++ b/src/components/Navbar/Navbar.styl
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   color: white;
+  max-width: 260px; // Fix flex grow problem with firefox when content too large
 }
 
 .logoContainer {
